fix duplicate mask